--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -33,6 +33,15 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
-
+dependencies {
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+}
+dependencies {
+    implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+}
+repositories {
+    mavenCentral()
+}
 
 
