--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -36,3 +36,8 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:ftc:0.1.8"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.13"
 }
+dependencies {
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    // the following is optional if you want vision
+    implementation 'org.ftclib.ftclib:vision:2.1.0'
+}
